# xz-rs

./: Cargo.toml  README.md
scratch/: 123.crc32.xz  123.crc64.xz  123.none.xz  123.sha256.xz  abc.crc32.xz  abc.crc64.xz  abc.none.xz  abc.sha256.xz  abc123  abc123.crc32.xz  abc123.crc64.xz  abc123.none.xz  abc123.sha256.xz  msg  msg.crc32.xz  msg.crc64.xz  msg.none.xz  msg.sha256.xz
src/: cli.rs  lib.rs
src/block/: error.rs  filter.rs  flags.rs  header.rs  index.rs  mod.rs  var_length_int.rs
src/block/filter/: mod.rs
src/checksum/: checksum_trait.rs  crc32.rs  crc64.rs  mod.rs
src/decode/: error.rs  mod.rs  recorded_reader.rs
src/encode/: error.rs  mod.rs
src/error/: decode_error.rs  encode_error.rs  mod.rs
src/lzma2/: error.rs  mod.rs
src/lzma2/decoder/: dict.rs  len_decoder.rs  lzma2_decoder.rs  lzma_decoder.rs  lzma_state.rs  mod.rs  range_decoder.rs
src/lzma2/encoder/: dict.rs  lzma2_encoder.rs  lzma_encoder.rs  mod.rs  range_encoder.rs
src/stream/: error.rs  flags.rs  footer.rs  header.rs  index.rs  mod.rs
src/util/: checked_reader.rs  checked_writer.rs  decode.rs  encode.rs  input_reader.rs  logging_reader.rs  mod.rs  var_length_int.rs
